# MMA-ELO

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
notes/: champion_policy.md  forward_test_2026_03_14.md
src/: cli.py
src/backtest/: __init__.py  betting.py
src/cleaning/: __init__.py
src/entities/: __init__.py
src/evaluation/: __init__.py  ablation.py  calibration.py  edge_analysis.py  model_selection.py  walk_forward.py
src/features/: __init__.py  sequential.py
src/ingestion/: __init__.py  contracts.py  db_init.py  schema.py
src/markets/: __init__.py  reporting.py
src/models/: __init__.py  baselines.py
src/orchestration/: __init__.py  workflow.py
src/ratings/: __init__.py  elo.py
src/utils/: config.py  logging.py
tests/: test_ablation_config.py  test_ablation_experiments.py  test_backtest_betting.py  test_calibration_diagnostics.py  test_chronology_guard_placeholder.py  test_data_coverage_audit.py  test_data_integrity_validation.py  test_edge_analysis.py  test_ingestion_skeleton.py  test_market_odds_ingestion.py  test_model_baselines.py  test_model_selection.py  test_placeholder.py  test_ratings_elo.py  test_research_summary_report.py  test_schema_creation.py  test_sequential_features.py  test_ufc_stats_archive_replay_ingestion.py  test_ufc_stats_bout_stats_parsing.py  test_ufc_stats_bout_stats_persistence.py  test_ufc_stats_fighter_metadata_parsing.py  test_ufc_stats_fighter_metadata_persistence.py  test_ufc_stats_parsing.py  test_ufc_stats_persistence.py  test_walk_forward_evaluation.py  test_workflow_orchestration.py
(+1716 files in other folders)
